--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -596,12 +596,12 @@
 
     <div class="container">
         <div class="heading heading-flex mb-2">
-            <div class="heading-left">
-                <h2 class="title mb-5">Consoles & Accessories</h2><!-- End .title -->
+            <div class="heading-left" th:object="${categoryEntity}">
+                <h2 class="title mb-5" th:text="${categoryEntity.name}"></h2><!-- End .title -->
             </div><!-- End .heading-left -->
 
-            <div class="heading-right">
-                <a href="category.html" class="title-link">View more products <i class="las la-arrow-right"></i></a>
+            <div class="heading-right" th:object="${categoryEntity}">
+                <a th:href="@{/list_product_category(name=${categoryEntity.name})}" class="title-link">View more products <i class="las la-arrow-right"></i></a>
             </div><!-- End .heading-right -->
         </div><!-- End .heading -->
 
@@ -630,133 +630,24 @@
                                 }
                             }
                         }'>
-            <div class="product">
+            <div class="product" th:each="product : ${products}">
                 <figure class="product-media">
                     <span class="product-label label-new">New</span>
-                    <a href="product.html">
-                        <img src="images/index/products/product-12.jpg" alt="Product image" class="product-image">
+                    <a th:href="@{/productdetail(id=${product.productid})}">
+                        <img th:src="@{${'/images/upload/' + product.images[0].name}}"
+                             alt="Product image" class="product-image">
                     </a>
-
-                    <div class="product-action-vertical">
-                        <a href="#" class="btn-product-icon btn-wishlist"
-                           title="Add to Wishlist"><span>add to wishlist</span></a>
-                    </div><!-- End .product-action-vertical -->
-
-                    <div class="product-action">
-                        <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                    </div><!-- End .product-action -->
                 </figure><!-- End .product-media -->
 
                 <div class="product-body">
-                    <h3 class="product-title"><a href="product.html">Microsoft - Xbox Elite Wireless Controller</a></h3>
+                    <h3 class="product-title" th:text="${product.name}"><a th:href="@{/productdetail(id=${product.productid})}"></a></h3>
                     <!-- End .product-title -->
-                    <div class="product-price">
-                        $149.99
+                    <div class="product-price"th:text="${product.price}">
+
                     </div><!-- End .product-price -->
                 </div><!-- End .product-body -->
             </div><!-- End .product -->
 
-            <div class="product">
-                <figure class="product-media">
-                    <span class="product-label label-top">Top</span>
-                    <a href="product.html">
-                        <img src="images/index/products/product-13.jpg" alt="Product image" class="product-image">
-                    </a>
-
-                    <div class="product-action-vertical">
-                        <a href="#" class="btn-product-icon btn-wishlist"
-                           title="Add to Wishlist"><span>add to wishlist</span></a>
-                    </div><!-- End .product-action-vertical -->
-
-                    <div class="product-action">
-                        <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                    </div><!-- End .product-action -->
-                </figure><!-- End .product-media -->
-
-                <div class="product-body">
-                    <h3 class="product-title"><a href="product.html">Sony - PlayStation 4 1TB Console - Black</a></h3>
-                    <!-- End .product-title -->
-                    <div class="product-price">
-                        $299.99
-                    </div><!-- End .product-price -->
-                </div><!-- End .product-body -->
-            </div><!-- End .product -->
-
-            <div class="product">
-                <figure class="product-media">
-                    <a href="product.html">
-                        <img src="images/index/products/product-14.jpg" alt="Product image" class="product-image">
-                    </a>
-
-                    <div class="product-action-vertical">
-                        <a href="#" class="btn-product-icon btn-wishlist"
-                           title="Add to Wishlist"><span>add to wishlist</span></a>
-                    </div><!-- End .product-action-vertical -->
-
-                    <div class="product-action">
-                        <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                    </div><!-- End .product-action -->
-                </figure><!-- End .product-media -->
-
-                <div class="product-body">
-                    <h3 class="product-title"><a href="product.html">Nintendo - Switch 32GB Console</a></h3>
-                    <!-- End .product-title -->
-                    <div class="product-price">
-                        $149.99
-                    </div><!-- End .product-price -->
-                </div><!-- End .product-body -->
-            </div><!-- End .product -->
-
-            <div class="product">
-                <figure class="product-media">
-                    <span class="product-label label-top">Top</span>
-                    <a href="product.html">
-                        <img src="images/index/products/product-15.jpg" alt="Product image" class="product-image">
-                    </a>
-
-                    <div class="product-action-vertical">
-                        <a href="#" class="btn-product-icon btn-wishlist"
-                           title="Add to Wishlist"><span>add to wishlist</span></a>
-                    </div><!-- End .product-action-vertical -->
-
-                    <div class="product-action">
-                        <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                    </div><!-- End .product-action -->
-                </figure><!-- End .product-media -->
-
-                <div class="product-body">
-                    <h3 class="product-title"><a href="product.html">HyperX - Cloud Alpha Wired Stereo Gaming
-                        Headset</a></h3><!-- End .product-title -->
-                    <div class="product-price">
-                        $99.99
-                    </div><!-- End .product-price -->
-                </div><!-- End .product-body -->
-            </div><!-- End .product -->
-
-            <div class="product">
-                <figure class="product-media">
-                    <a href="product.html">
-                        <img src="images/index/products/product-16.jpg" alt="Product image" class="product-image">
-                    </a>
-
-                    <div class="product-action-vertical">
-                        <a href="#" class="btn-product-icon btn-wishlist"
-                           title="Add to Wishlist"><span>add to wishlist</span></a>
-                    </div><!-- End .product-action-vertical -->
-
-                    <div class="product-action">
-                        <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                    </div><!-- End .product-action -->
-                </figure><!-- End .product-media -->
-
-                <div class="product-body">
-                    <h3 class="product-title"><a href="product.html">Logitech - G502 HERO Wired Optical Gaming Mouse
-                        Pack</a></h3><!-- End .product-title -->
-                    <div class="product-price">
-                        $59.99
-                    </div><!-- End .product-price -->
-                </div><!-- End .product-body -->
-            </div><!-- End .product -->
         </div><!-- End .owl-carousel -->
 
         <div class="mb-5"></div><!-- End .mb-4 -->
@@ -769,8 +660,8 @@
                     <h2 class="title mb-0">From Our Blog</h2><!-- End .title -->
                 </div><!-- End .heading-left -->
 
-                <div class="heading-right">
-                    <a href="blog.html" class="title-link">View more articles <i class="las la-arrow-right"></i></a>
+                <div class="heading-right" >
+                    <a class="title-link">View more articles <i class="las la-arrow-right"></i></a>
                 </div><!-- End .heading-right -->
             </div><!-- End .heading -->
 
@@ -797,95 +688,24 @@
                                     }
                                 }
                             }'>
-                <article class="entry">
+                <article class="entry" th:each="blog: ${blogs}">
                     <figure class="entry-media">
-                        <a href="single.html">
-                            <img src="images/index/blog/post-1.jpg" alt="image desc">
+                        <a th:href="@{/detailnews(id=${blog.id})}">
+                            <img th:src="${blog.image}" alt="image desc">
                         </a>
                     </figure><!-- End .entry-media -->
 
                     <div class="entry-body">
                         <div class="entry-meta">
-                            <a href="#">Aug 22, 2021</a>, 0 Comments
+                            <a th:href="@{/detailnews(id=${blog.id})}" th:text="${blog.updatedAt}">Aug 22, 2021</a>, 0 comment
                         </div><!-- End .entry-meta -->
 
                         <h3 class="entry-title">
-                            <a href="single.html">Morbi in sem quis dui placerat mauris sit ornare.</a>
+                            <a th:href="@{/detailnews(id=${blog.id})}" th:text="${blog.description}">Morbi in sem quis dui placerat mauris sit ornare.</a>
                         </h3><!-- End .entry-title -->
                     </div><!-- End .entry-body -->
                 </article><!-- End .entry -->
 
-                <article class="entry">
-                    <figure class="entry-media">
-                        <a href="single.html">
-                            <img src="images/index/blog/post-2.jpg" alt="image desc">
-                        </a>
-                    </figure><!-- End .entry-media -->
-
-                    <div class="entry-body">
-                        <div class="entry-meta">
-                            <a href="#">Aug 22, 2021</a>, 0 Comments
-                        </div><!-- End .entry-meta -->
-
-                        <h3 class="entry-title">
-                            <a href="single.html">Aliquam porttitor mauris sit ametorci.</a>
-                        </h3><!-- End .entry-title -->
-                    </div><!-- End .entry-body -->
-                </article><!-- End .entry -->
-
-                <article class="entry">
-                    <figure class="entry-media">
-                        <a href="single.html">
-                            <img src="images/index/blog/post-3.jpg" alt="image desc">
-                        </a>
-                    </figure><!-- End .entry-media -->
-
-                    <div class="entry-body">
-                        <div class="entry-meta">
-                            <a href="#">Aug 22, 2021</a>, 2 Comments
-                        </div><!-- End .entry-meta -->
-
-                        <h3 class="entry-title">
-                            <a href="single.html">Cras ornare tristique elit.</a>
-                        </h3><!-- End .entry-title -->
-                    </div><!-- End .entry-body -->
-                </article><!-- End .entry -->
-
-                <article class="entry">
-                    <figure class="entry-media">
-                        <a href="single.html">
-                            <img src="images/index/blog/post-4.jpg" alt="image desc">
-                        </a>
-                    </figure><!-- End .entry-media -->
-
-                    <div class="entry-body">
-                        <div class="entry-meta">
-                            <a href="#">Aug 22, 2021</a>, 2 Comments
-                        </div><!-- End .entry-meta -->
-
-                        <h3 class="entry-title">
-                            <a href="single.html">Donec consectetuer ligula vulputate sem cursus.</a>
-                        </h3><!-- End .entry-title -->
-                    </div><!-- End .entry-body -->
-                </article><!-- End .entry -->
-
-                <article class="entry">
-                    <figure class="entry-media">
-                        <a href="single.html">
-                            <img src="images/index/blog/post-1.jpg" alt="image desc">
-                        </a>
-                    </figure><!-- End .entry-media -->
-
-                    <div class="entry-body">
-                        <div class="entry-meta">
-                            <a href="#">Aug 22, 2021</a>, 0 Comments
-                        </div><!-- End .entry-meta -->
-
-                        <h3 class="entry-title">
-                            <a href="single.html">Morbi in sem quis dui placerat mauris sit ornare.</a>
-                        </h3><!-- End .entry-title -->
-                    </div><!-- End .entry-body -->
-                </article><!-- End .entry -->
             </div><!-- End .owl-carousel -->
         </div><!-- End .container -->
     </div><!-- End .blog-posts -->
