--- a/src/main/resources/templates/listorder.html
+++ b/src/main/resources/templates/listorder.html
@@ -17,15 +17,6 @@
                 <span class="navbar-toggler-icon icon-bar"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end">
-                <form method="post" th:action="@{/OrderSearch}" class="navbar-form col-md-4" style="float: right; margin-top: 30px">
-                    <div class="input-group no-border">
-                        <input type="text" name="name" value="" class="form-control" placeholder="Search...">
-                        <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                            <i class="material-icons">search</i>
-                            <div class="ripple-container"></div>
-                        </button>
-                    </div>
-                </form>
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="javascript:;">
@@ -71,6 +62,15 @@
     </nav>
     <div class="content">
         <div class="container-fluid">
+            <form method="post" th:action="@{/OrderSearch}" class="navbar-form col-md-12">
+                <div class="input-group no-border col-md-4 float-right">
+                    <input type="text" name="name" value="" class="form-control" placeholder="Search...">
+                    <button type="submit" class="btn btn-white btn-round btn-just-icon">
+                        <i class="material-icons">search</i>
+                        <div class="ripple-container"></div>
+                    </button>
+                </div>
+            </form>
             <nav>
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
                     <a class="nav-item nav-link active font-weight-bold" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">PAID <span class="badge badge-primary" th:text="${#lists.size(Paid)}">5</span></a>
