--- a/src/main/resources/templates/buyer_order.html
+++ b/src/main/resources/templates/buyer_order.html
@@ -2,73 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/adminlayout/template_admin.html}">
+<head>
     <title>Buyer order</title>
+</head>
 <body>
 <div class="main-panel" layout:fragment="content">
-    <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
-        <div class="container-fluid">
-            <div class="navbar-wrapper">
-                <a class="navbar-brand" href="javascript:;">Table List</a>
-            </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="navbar-toggler-icon icon-bar"></span>
-                <span class="navbar-toggler-icon icon-bar"></span>
-                <span class="navbar-toggler-icon icon-bar"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end">
-                <form method="post" th:action="@{/OrderSearch}" class="navbar-form col-md-4" style="float: right; margin-top: 30px">
-                    <div class="input-group no-border">
-                        <input type="text" name="name" value="" class="form-control" placeholder="Search...">
-                        <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                            <i class="material-icons">search</i>
-                            <div class="ripple-container"></div>
-                        </button>
-                    </div>
-                </form>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="javascript:;">
-                            <i class="material-icons">dashboard</i>
-                            <p class="d-lg-none d-md-block">
-                                Stats
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="material-icons">notifications</i>
-                            <span class="notification">5</span>
-                            <p class="d-lg-none d-md-block">
-                                Some Actions
-                            </p>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Mike John responded to your email</a>
-                            <a class="dropdown-item" href="#">You have 5 new tasks</a>
-                            <a class="dropdown-item" href="#">You're now friend with Andrew</a>
-                            <a class="dropdown-item" href="#">Another Notification</a>
-                            <a class="dropdown-item" href="#">Another One</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link" href="javascript:;" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="material-icons">person</i>
-                            <p class="d-lg-none d-md-block">
-                                Account
-                            </p>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-                            <a class="dropdown-item" href="#">Profile</a>
-                            <a class="dropdown-item" href="#">Settings</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="/logout">Log out</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <div class="content">
         <div class="container-fluid">
             <div class="row">
@@ -78,8 +16,8 @@
                             <h4 class="card-title ">Product admin</h4>
                         </div>
                         <div class="card-body">
-                            <div th:if="${mess}" th:text="${mess}" class="bg-success text-white p-2"/>
                             <div class="table-responsive">
+
                                 <table class="table">
                                     <thead class=" text-primary">
                                     <th scope="col">Buyer</th>
@@ -97,7 +35,7 @@
                                             <td th:text="${item.orders.priceTotal}"></td>
                                             <td th:text="${item.orders.status}"></td>
                                             <td th:text="${item.orders.createdAt}"></td>
-                                            <td th:text="${money} + ' (-20% fee)'"></td>
+                                            <td th:text="${money} + ' (-2% fee)'"></td>
                                             <td th:if="${item.orders.status} == 'PAID' ">
                                                 <form method="post" action="/seller_confirm">
                                                 <input type="hidden" name="id" th:value="${item.orders.orderid}">
@@ -112,15 +50,16 @@
                                                 <p class="font-weight-bold">DONE</p>
                                             </td>
                                         </tr>
-                                    </tbody>
+                                        </tbody>
+                                    </form>
                                 </table>
-                                <nav aria-label="Page navigation">
-                                    <ul class="pagination">
-                                        <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">
-                                            <a class="page-link" th:href="@{/listorder(size=${size}, page=${t})}" th:text="${t+1}"></a>
-                                        </li>
-                                    </ul>
-                                </nav>
+<!--                                <nav aria-label="Page navigation">-->
+<!--                                    <ul class="pagination">-->
+<!--                                        <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">-->
+<!--                                            <a class="page-link" th:href="@{/listorder(size=${size}, page=${t})}" th:text="${t+1}"></a>-->
+<!--                                        </li>-->
+<!--                                    </ul>-->
+<!--                                </nav>-->
                             </div>
                         </div>
                     </div>
@@ -129,5 +68,7 @@
         </div>
     </div>
 </div>
+
 </body>
+
 </html>
