--- a/src/main/resources/templates/list_user.html
+++ b/src/main/resources/templates/list_user.html
@@ -52,6 +52,7 @@
                                         <td>
                                             <a th:href="@{/update(id=${user.id})}" th:text="Edit"></a>
                                             <a th:href="@{/delete(id=${user.id})}" th:text="Delete"></a>
+                                            <a th:href="@{/addfund(id=${user.id})}" th:text="Add fund"></a>
                                         </td>
                                     </tr>
                                     </tbody>
