--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -63,7 +63,8 @@
 
                                             <div class="product-body">
                                                 <div class="product-cat">
-                                                    <a th:href="@{/list_product_category(name=${product.category.name})}" th:text="${product.category.name}">Jackets</a>
+                                                    <a th:href="@{/list_product_category(name=${product.category.name})}"
+                                                       th:text="${product.category.name}">Jackets</a>
                                                 </div><!-- End .product-cat -->
                                                 <h3 class="product-title"><a
                                                         th:href="@{/productdetail(id=${product.productid})}"
@@ -91,14 +92,15 @@
 
                             <nav aria-label="Page navigation">
                                 <ul class="pagination justify-content-center">
-                                    <li class="page-item" >
-                                        <a class="page-link page-link-prev" href="#" aria-label="Previous" tabindex="-1" aria-disabled="true">
+                                    <li class="page-item">
+                                        <a class="page-link page-link-prev" href="#" aria-label="Previous" tabindex="-1"
+                                           aria-disabled="true">
                                             <span aria-hidden="true"><i class="icon-long-arrow-left"></i></span>Prev
                                         </a>
                                     </li>
-                                    <li  class="page-item"
-                                         th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}"
-                                         th:classappend="${t==page} ? active">
+                                    <li class="page-item"
+                                        th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}"
+                                        th:classappend="${t==page} ? active">
                                         <a class="page-link" th:href="@{/products(size=${size}, page=${t})}"
                                            th:text="${t+1}"></a>
                                     </li>
@@ -110,10 +112,7 @@
                                     </li>
                                 </ul>
                             </nav>
-
-
                         </div><!-- End .col-lg-9 -->
-
                         <aside class="col-lg-3 order-lg-first">
                             <div class="sidebar sidebar-shop">
                                 <div class="widget widget-clean">
@@ -146,132 +145,6 @@
                                         </div><!-- End .widget-body -->
                                     </div><!-- End .collapse -->
                                 </div><!-- End .widget -->
-
-                                <div class="widget widget-collapsible">
-                                    <h3 class="widget-title">
-                                        <a data-toggle="collapse" href="#widget-4" role="button" aria-expanded="true"
-                                           aria-controls="widget-4">
-                                            Brand
-                                        </a>
-                                    </h3><!-- End .widget-title -->
-
-                                    <div class="collapse show" id="widget-4">
-                                        <div class="widget-body">
-                                            <div class="filter-items">
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input"
-                                                               id="brand-1">
-                                                        <label class="custom-control-label" for="brand-1">Next</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input"
-                                                               id="brand-2">
-                                                        <label class="custom-control-label" for="brand-2">River
-                                                            Island</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input"
-                                                               id="brand-3">
-                                                        <label class="custom-control-label" for="brand-3">Geox</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input"
-                                                               id="brand-4">
-                                                        <label class="custom-control-label" for="brand-4">New
-                                                            Balance</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input"
-                                                               id="brand-5">
-                                                        <label class="custom-control-label" for="brand-5">UGG</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input"
-                                                               id="brand-6">
-                                                        <label class="custom-control-label"
-                                                               for="brand-6">F&amp;F</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input"
-                                                               id="brand-7">
-                                                        <label class="custom-control-label" for="brand-7">Nike</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                            </div><!-- End .filter-items -->
-                                        </div><!-- End .widget-body -->
-                                    </div><!-- End .collapse -->
-                                </div><!-- End .widget -->
-
-                                <div class="widget widget-collapsible">
-                                    <h3 class="widget-title">
-                                        <a data-toggle="collapse" href="#widget-5" role="button" aria-expanded="true"
-                                           aria-controls="widget-5">
-                                            Price
-                                        </a>
-                                    </h3><!-- End .widget-title -->
-
-                                    <div class="collapse show" id="widget-5">
-                                        <div class="widget-body">
-                                            <div class="filter-price">
-                                                <div class="filter-price-text">
-                                                    Price Range:
-                                                    <span id="filter-price-range">$0 - $750</span>
-                                                </div><!-- End .filter-price-text -->
-
-                                                <div id="price-slider" class="noUi-target noUi-ltr noUi-horizontal">
-                                                    <div class="noUi-base">
-                                                        <div class="noUi-connects">
-                                                            <div class="noUi-connect"
-                                                                 style="transform: translate(0%, 0px) scale(0.75, 1);"></div>
-                                                        </div>
-                                                        <div class="noUi-origin"
-                                                             style="transform: translate(-100%, 0px); z-index: 5;">
-                                                            <div class="noUi-handle noUi-handle-lower" data-handle="0"
-                                                                 tabindex="0" role="slider"
-                                                                 aria-orientation="horizontal" aria-valuemin="0.0"
-                                                                 aria-valuemax="550.0" aria-valuenow="0.0"
-                                                                 aria-valuetext="$0">
-                                                                <div class="noUi-touch-area"></div>
-                                                                <div class="noUi-tooltip">$0</div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="noUi-origin"
-                                                             style="transform: translate(-25%, 0px); z-index: 4;">
-                                                            <div class="noUi-handle noUi-handle-upper" data-handle="1"
-                                                                 tabindex="0" role="slider"
-                                                                 aria-orientation="horizontal" aria-valuemin="200.0"
-                                                                 aria-valuemax="1000.0" aria-valuenow="750.0"
-                                                                 aria-valuetext="$750">
-                                                                <div class="noUi-touch-area"></div>
-                                                                <div class="noUi-tooltip">$750</div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div><!-- End #price-slider -->
-                                            </div><!-- End .filter-price -->
-                                        </div><!-- End .widget-body -->
-                                    </div><!-- End .collapse -->
-                                </div><!-- End .widget -->
                             </div><!-- End .sidebar sidebar-shop -->
                         </aside><!-- End .col-lg-3 -->
                     </div><!-- End .row -->
@@ -279,7 +152,6 @@
             </div><!-- End .page-content -->
         </main>
     </div>
-
 </div>
 </body>
 </html>
