fix_buyer_order

--- a/src/main/resources/templates/listorder.html
+++ b/src/main/resources/templates/listorder.html
@@ -110,7 +110,6 @@
                                                 <td>
                                                     <form method="post" action="/user_confirm">
                                                         <input type="hidden" name="id" th:value="${ord.orderid}">
-                                                        <button type="submit" class="btn btn-primary" th:if="${ord.status} == 'DELIVERED' ">Received</button>
                                                         <a class="btn btn-success" th:href="@{/orderdetail(id=${ord.orderid})}">Detail</a>
                                                     </form>
                                                 </td>
@@ -161,7 +160,7 @@
                                                 <td>
                                                     <form method="post" action="/user_confirm">
                                                         <input type="hidden" name="id" th:value="${ord.orderid}">
-                                                        <button type="submit" class="btn btn-primary" th:if="${ord.status} == 'DELIVERED' ">Received</button>
+                                                        <button type="submit" class="btn btn-primary">Received</button>
                                                         <a class="btn btn-success" th:href="@{/orderdetail(id=${ord.orderid})}">Detail</a>
                                                     </form>
                                                 </td>
@@ -212,7 +211,6 @@
                                                 <td>
                                                     <form method="post" action="/user_confirm">
                                                         <input type="hidden" name="id" th:value="${ord.orderid}">
-                                                        <button type="submit" class="btn btn-primary" th:if="${ord.status} == 'DELIVERED' ">Received</button>
                                                         <a class="btn btn-success" th:href="@{/orderdetail(id=${ord.orderid})}">Detail</a>
                                                     </form>
                                                 </td>
