--- a/src/main/resources/templates/buyer_order.html
+++ b/src/main/resources/templates/buyer_order.html
@@ -7,63 +7,196 @@
 </head>
 <body>
 <div class="main-panel" layout:fragment="content">
+    <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
+        <div class="container-fluid">
+            <div class="navbar-wrapper">
+                <a class="navbar-brand" href="javascript:;">Table List</a>
+            </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="navbar-toggler-icon icon-bar"></span>
+                <span class="navbar-toggler-icon icon-bar"></span>
+                <span class="navbar-toggler-icon icon-bar"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript:;">
+                            <i class="material-icons">dashboard</i>
+                            <p class="d-lg-none d-md-block">
+                                Stats
+                            </p>
+                        </a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="javascript:;" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="material-icons">person</i>
+                            <p class="d-lg-none d-md-block">
+                                Account
+                            </p>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
+                            <a class="dropdown-item" href="#">Profile</a>
+                            <a class="dropdown-item" href="#">Settings</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/logout">Log out</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="content">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="card">
-                        <div class="card-header card-header-primary">
-                            <h4 class="card-title ">Product admin</h4>
+            <form method="post" th:action="@{/OrderSearch}" class="navbar-form col-md-12">
+                <div class="input-group no-border col-md-4 float-right">
+                    <input type="text" name="name" value="" class="form-control" placeholder="Search...">
+                    <button type="submit" class="btn btn-white btn-round btn-just-icon">
+                        <i class="material-icons">search</i>
+                        <div class="ripple-container"></div>
+                    </button>
+                </div>
+            </form>
+            <nav>
+                <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                    <a class="nav-item nav-link active font-weight-bold" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">PAID <span class="badge badge-primary" th:text="${#lists.size(Paid)}">5</span></a>
+                    <a class="nav-item nav-link font-weight-bold" id="nav-profile-tab " data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">DELIVERING <span class="badge badge-warning" th:text="${#lists.size(Delivered)}">5</span></a>
+                    <a class="nav-item nav-link font-weight-bold" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">DONE <span class="badge badge-success" th:text="${#lists.size(Done)}">5</span></a>
+                </div>
+            </nav>
+            <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="card-header card-header-primary">
+                                    <h4 class="card-title ">List Order paid </h4>
+                                </div>
+                                <div class="card-body">
+                                    <div th:if="${mess}" th:text="${mess}" class="bg-success text-white p-2"/>
+                                    <div class="table-responsive">
+                                        <table class="table">
+                                            <thead class=" text-primary">
+                                            <th scope="col">Buyer</th>
+                                            <th scope="col">Product</th>
+                                            <th scope="col">Total</th>
+                                            <th scope="col">Status</th>
+                                            <th scope="col">createdAt</th>
+                                            <th scope="col">Money Recived</th>
+                                            <th scope="col">Action</th>
+                                            </thead>
+                                            <tbody>
+                                            <tr th:each="item : ${Paid}">
+                                                <th scope="row" th:text="${item.orders.user.username}"></th>
+                                                <td th:text="${item.products.name}"></td>
+                                                <td th:text="${item.orders.priceTotal}"></td>
+                                                <td th:text="${item.orders.status}"></td>
+                                                <td th:text="${item.orders.createdAt}"></td>
+                                                <td th:text="${money} + ' (-2% fee)'"></td>
+                                                <td>
+                                                    <form method="post" action="/seller_confirm">
+                                                        <input type="hidden" name="id" th:value="${item.orders.orderid}">
+                                                        <button type="submit" class="btn btn-primary">CONFIRM</button>
+                                                        <a class="btn btn-success" th:href="@{/orderdetail(id=${item.orders.orderid})}">Detail</a>
+                                                    </form>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="card-body">
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <thead class=" text-primary">
-                                    <th scope="col">Buyer</th>
-                                    <th scope="col">Product</th>
-                                    <th scope="col">Total</th>
-                                    <th scope="col">Status</th>
-                                    <th scope="col">createdAt</th>
-                                    <th scope="col">Money Recived</th>
-                                    <th scope="col">Action</th>
-                                    </thead>
-                                    <tbody>
-                                        <tr th:each="item : ${orderitem}">
-                                            <th scope="row" th:text="${item.orders.user.username}"></th>
-                                            <td th:text="${item.products.name}"></td>
-                                            <td th:text="${item.orders.priceTotal}"></td>
-                                            <td th:text="${item.orders.status}"></td>
-                                            <td th:text="${item.orders.createdAt}"></td>
-                                            <td th:text="${money} + ' (-2% fee)'"></td>
-                                            <td th:if="${item.orders.status} == 'PAID' ">
-                                                <form method="post" action="/seller_confirm">
-                                                <input type="hidden" name="id" th:value="${item.orders.orderid}">
-                                                <button type="submit" class="btn btn-primary">CONFIRM</button>
-                                                <!--                                        <a class="btn btn-success" th:href="@{/orderdetail(id=${ord.orderid})}">Detail</a>-->
-                                                </form>
-                                            </td>
-                                            <td th:if="${item.orders.status} == 'DELIVERED'">
-                                                <p class="font-weight-bold">CONFIRMED</p>
-                                            </td>
-                                            <td th:if="${item.orders.status} == 'RECEIVED'">
-                                                <p class="font-weight-bold">DONE</p>
-                                            </td>
-                                        </tr>
-                                        </tbody>
-                                    </form>
-                                </table>
-<!--                                <nav aria-label="Page navigation">-->
-<!--                                    <ul class="pagination">-->
-<!--                                        <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">-->
-<!--                                            <a class="page-link" th:href="@{/listorder(size=${size}, page=${t})}" th:text="${t+1}"></a>-->
-<!--                                        </li>-->
-<!--                                    </ul>-->
-<!--                                </nav>-->
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="card-header card-header-primary">
+                                    <h4 class="card-title ">List Order paid </h4>
+                                </div>
+                                <div class="card-body">
+                                    <div th:if="${mess}" th:text="${mess}" class="bg-success text-white p-2"/>
+                                    <div class="table-responsive">
+                                        <table class="table">
+                                            <thead class=" text-primary">
+                                            <th scope="col">Buyer</th>
+                                            <th scope="col">Product</th>
+                                            <th scope="col">Total</th>
+                                            <th scope="col">Status</th>
+                                            <th scope="col">createdAt</th>
+                                            <th scope="col">Money Recived</th>
+                                            <th scope="col">Action</th>
+                                            </thead>
+                                            <tbody>
+                                            <tr th:each="item : ${Delivered}">
+                                                <th scope="row" th:text="${item.orders.user.username}"></th>
+                                                <td th:text="${item.products.name}"></td>
+                                                <td th:text="${item.orders.priceTotal}"></td>
+                                                <td th:text="${item.orders.status}"></td>
+                                                <td th:text="${item.orders.createdAt}"></td>
+                                                <td th:text="${money} + ' (-2% fee)'"></td>
+                                                <td>
+                                                    <form method="post" action="/seller_confirm">
+                                                        <input type="hidden" name="id" th:value="${item.orders.orderid}">
+                                                        <a class="btn btn-success" th:href="@{/orderdetail(id=${item.orders.orderid})}">Detail</a>
+                                                    </form>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="card-header card-header-primary">
+                                    <h4 class="card-title ">List Order paid </h4>
+                                </div>
+                                <div class="card-body">
+                                    <div th:if="${mess}" th:text="${mess}" class="bg-success text-white p-2"/>
+                                    <div class="table-responsive">
+                                        <table class="table">
+                                            <thead class=" text-primary">
+                                            <th scope="col">Buyer</th>
+                                            <th scope="col">Product</th>
+                                            <th scope="col">Total</th>
+                                            <th scope="col">Status</th>
+                                            <th scope="col">createdAt</th>
+                                            <th scope="col">Money Recived</th>
+                                            <th scope="col">Action</th>
+                                            </thead>
+                                            <tbody>
+                                            <tr th:each="item : ${Done}">
+                                                <th scope="row" th:text="${item.orders.user.username}"></th>
+                                                <td th:text="${item.products.name}"></td>
+                                                <td th:text="${item.orders.priceTotal}"></td>
+                                                <td th:text="${item.orders.status}"></td>
+                                                <td th:text="${item.orders.createdAt}"></td>
+                                                <td th:text="${money} + ' (-2% fee)'"></td>
+                                                <td>
+                                                    <form method="post" action="/seller_confirm">
+                                                        <input type="hidden" name="id" th:value="${item.orders.orderid}">
+                                                        <a class="btn btn-success" th:href="@{/orderdetail(id=${item.orders.orderid})}">Detail</a>
+                                                    </form>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </div>
